css/arkusz.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
   reset
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*below my code*/

html {
 	font-size: 16px;
 	font-family: Verdana, Geneva, sans-serif;
}


body {
 	color: #191919;	
}

.clearfix {
	content: '';
	display: block;
	clear: both;
}

header p {
	text-indent: 0;
}

p {
	line-height: 1.4;
	text-align: justify;
}

.column-adjusted {
	padding: 0;
}

.nav {
	text-transform: uppercase;
	font-size: 0.8rem;
}

.nav > li > a:hover,
.nav > li > a:focus {
	background: #191919;
	outline: 2px solid #fff;
	outline-offset: -2px;
}

@media (max-width: 767px) {
	.nav > li > a {
		height: 3.75rem;
		line-height: 2.5;
		padding-left: 2rem;
	}

	.nav {
		margin-top: 0;
		margin-bottom: 0;
	}
}

.navbar {
	background-color: #191919;
	margin-bottom: 0;
	z-index: 10;
}

.navbar a {
	color: #f7f7f7;
}

.navbar-right {
	margin-right: 1.25rem;
}

@media(max-width: 767px) {
	.navbar-right {
		margin-right: 0;
		padding-right: 0;
	}
}
.navbar-header {
	margin-left: 1.25rem;
}

.navbar-toggle {
	background-color: #DCDCDC;
	margin-right: 1.25rem;
}

.icon-bar {
	background-color: #000;
}

.intro {
	height: 48.75rem;
	background: url(../img/simon-rae-422576-unsplash.jpg);
	background-size: cover;
	position: relative;
}

.intro__buttons__container {
	padding: 0 0 1rem 2rem;
}

.intro__button {
	background: rgba(0,0,0,0.3);
	outline: none;
	border: 3px solid #191919;
	border: 3px solid #fff;
	display: inline-block;
	height: 3.75rem;
	width: 15.625rem;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 2px;
	color: #fff;
	margin: 0.8rem;
	line-height: 3;
	text-align: center;
	transition: 0.4s;
}

.intro__button:nth-of-type(2) {
	clear: both;
}

.intro__button:hover {
	background: rgba(0,0,0,0.7);
}

.intro__button:hover,
.intro__button:focus,
.intro__button:active {
	text-decoration: none;
	color: #fff;
}

.intro__header {
	/*font-family: "Montserrat", sans-serif;*/
	font-family: Impact, Charcoal, sans-serif;
	/*font-family: "Trebuchet MS", Helvetica, sans-serif;*/
	/*font-family: "Arial Black", Gadget, sans-serif;*/
	/*font-family: "Comic Sans MS", cursive, sans-serif;*/
	/*font-family: Georgia, serif;*/
	font-size: 5rem;
	font-weight: bold;
	color: #191919;
	width: 70%;
	padding: 7rem 2rem;
	text-align: left;
	position: relative;
}

.intro__header__subtitle {
	margin-top: 2rem;
	font-size: 3.5rem;
	text-align: left;
	text-indent: 0;
}

.intro__header:before {
	content: '';
	display: block;
	width: 6.25rem;
	height: 0.625rem;
	border-top: 3px solid #fff;
	position: absolute;
	left: 2.1rem;
	top: 6.5rem;
}

@media(max-width: 991px) {
	.intro {
		min-height: 36.25rem;
		height: auto;
		background-position: bottom;
	}

	.intro__header__container {
		max-width: 31.25rem;
	}

	.intro__header {
		font-size: 4rem;
		padding: 3rem 2rem;
	}

	.intro__header__subtitle {
		font-size: 2.5rem;
		margin-top: 1.5rem;
	}

	.intro__header:before {
		top: 2.5rem;
	}

	.intro__button {
		float: left;
	}
}

#origins,
#overview,
#articles,
#contact,
.article__content,
.panel-group {
	width: 62.5rem;
	margin: 4rem auto;
	max-width: 80%;
}

#overview,
#gallery {
	margin-top: 3rem;
}


.origins__heading,
.overview__heading,
.gallery__heading,
.articles__heading,
.contact__heading {
	font-size: 2rem;
	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
	font-weight: bold;
	/*font-family: Georgia, serif;*/
	padding: 2rem 1rem 3rem;
	text-align: center;
}

.gallery__heading {
	padding-bottom: 3.75rem;
}

/*.origins__text,
.overview__text,
.article__content {
	font-family: "Treblist__hostels__linkuchet MS", Helvetica, sans-serif;
}*/

.link_overview,
.list__hostels__link {
	color: #23527c;
	font-weight: bold;
	font-size: 1rem;
	text-align: center;
	padding: 0.4rem;
}

.link_overview:hover {
	background: rgba(65,66,84,0.1);
}

#gallery {
	padding: 0 1rem;
	width: 75rem;
	max-width: 90%;
	margin: 0 auto;
}

@media (max-width: 767px) {
	#gallery {
		max-width: 98%;
	}
}

.gallery__item {
	width: 50%;
	float: left;
	height: 380px;
	box-shadow: 1px 1px 10px 0 rgba(0,0,0,0.05);
	position: relative;
	transition: all 1s ease;
}

@media (max-width: 645px) {
	.gallery__item {
		width: 100%;
	}
}

.gallery__item__tile {
	width: 100%;
	height: 100%;
	display: block;	
	background-size: cover;
	background-position: center;
	transition: 0.7s;
}

.gallery__item:hover  .gallery__item__tile{
	transform: scale(0.99);
}

.gallery__item a {
	position: relative;
	bottom: 0;
	left: 0;
}

.gallery__item__overlay {
	position: absolute;
	top: 0;
	left: 0;
	max-width: 100%;
	max-height: 100%;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0);
	z-index: 1;
	transition: 0.7s;
	pointer-events: none;
}

.gallery__item:hover .gallery__item__overlay {
	background: rgba(0,0,0,0.1);
}

.gallery__item__button {
	background: rgba(0,0,0,0.3);
	outline: none;
	border: 3px solid #191919;
	border: 3px solid #fff;
	display: block;
	height: 3.75rem;
	width: 15.625rem;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 2px;
	color: #fff;
	margin: 0 auto;
	text-align: center;
	transition: 0.4s;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

..gallery__item:hover .gallery__item__button {
	background: rgba(0,0,0,0.5);
}

a#sadburyhill{
	background-image: url(../img/leyton_12.jpg);
}

a#leyton {
  	background-image: url(../img/leytongardens_7.jpg);
}

a#thames {
  	background-image: url(../img/towerbridge.jpg);
}

a#various {
  	background-image: url(../img/seashell.jpg);
}

.articles__item {
	display: block;
	width: 46%;
	margin: 0.5rem;
	float: left;
	font-size: 1.5rem;
	text-align: center;
	/*height: 4rem;*/
	/*line-height: 2.8;*/
	line-height: 1.2;
	position: relative;
}

.articles__link {
	color: #191919;
	display: inline-block;
	padding: 1rem 2rem;
	position: relative;
	height: auto;
}

.articles__link:after {
	content: '';
	display: block;
	width: 5rem;
	border-bottom: 3px solid rgba(0,0,0,0.8);
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	pointer-events: none;
	bottom: 0;
	transition: 0.3s ease;
}

.articles__link:hover:after {
	border: 3px solid rgba(0,0,0,0.8);
	height: 100%;
	width: 100%;
}

.articles__link:hover,
.articles__link:active,
.articles__link:focus {
	text-decoration: none;
	color: #191919;
}

@media (max-width: 730px) {
	.articles__item {
		width: 100%;
	}
}

.image_decoration {	
	background: url(../img/benjamin-davies-484913-unsplash.jpg);	
	background-size: cover;	
	background-position: bottom;
	background-attachment: fixed;
	height: 43.75rem;	
	margin: 6rem 0;	;	
}

.contact__details {
	width: 12.5rem;
	text-align: center;
	font-size: 1.5rem;
	margin: 0 auto;
}

.contact__details p {
	font-style: italic;
	text-indent: 0;
}

.article_individual__heading {
	font-size: 4rem;
	text-align: center;
	padding: 4rem 2rem 2rem;
	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
}

@media (max-width: 767px) {
	.article_individual__heading {
		font-size: 3rem;
	}
}

.article__decoration-upper {
		/*background: url(../img/benjamin-davies-484913-unsplash.jpg);*/
	background: url(../img/luca-micheli-422053-unsplash.jpg);
	background-size: cover;
	background-position: bottom 34% left;
	height: 16.25rem;
}

.article__content {
	width: 62.5rem;
	margin: 3rem auto;
	max-width: 80%;
	/*font-size: 1.1rem;*/
}

.article__list_places {
	list-style-type: disc;
	padding: 10px 0px 10px 60px;
	line-height: 125%;
}

@media (max-width: 690px) {
	.article__list_places {
		padding-left: 1rem;
	}
}

.list__hostels__item{
	margin-bottom: 3rem;
}

.list__hostels__link {
	display: block;
	width: 100%;
}

.list__hostels__title {
	font-weight: bold;
	font-size: 2rem;
	text-align: center;
}

.list__hostels__description {
	line-height: 1.4;
	text-align: justify;
}

.panel-group .panel {
	box-shadow: none;
	border-radius: 0;
	border: 0;
	border-bottom: 1px solid rgba(179, 120, 114, 0.2); ;
}

.panel-heading {
	padding: 0;
}

.panel-group .panel + .panel {
	margin-top: 0;
}
.panel-group .panel-title__link {
	padding: 2rem;
	background-color: rgba(179, 120, 114, 0.1);
	text-align: center;
	font-size: 1.1rem;
	font-weight: bold;
	border-radius: 0;
	height: 5.25rem;
	transition: background-color 0.5s ease-in-out;
}

.panel-title__link:before {
   content: "+";
   font-size: 1.25rem;
   float: left; 
   transition: transform 0.3s ease-in-out;
}

.panel-title__link:hover,
.panel-title__link:active {
	background-color: rgba(179, 120, 114, 0.3);
	text-decoration: none;
	outline: none;
}

.panel-title__link:focus {
	text-decoration: none;
}

.panel-heading.panel_expanded .panel-title__link {
	background-color: rgba(179, 120, 114, 0.3);
}

.panel-heading.panel_expanded .panel-title__link:before {
  	transform: rotate(-225deg);
}

.panel-title__link {
	display: inline-block;
	width: 100%;
	padding: 1rem 0;
}

.panel-group .panel-heading + .panel-collapse > .panel-body {
	border: 0;
	padding: 2rem;
} 

.panel-body {
    height:auto;
    overflow:hidden; 
    max-height: auto;
    transition:max-height 1s;
}

.panel-collapse.in > .panel-body {
	max-height: 50em;
}

.animate_in {
     animation: accordionIn 0.45s normal ease-in-out both 1; 
}

@keyframes accordionIn {
  0% {
    opacity: 0;
    transform:scale(0.9) rotateX(-60deg);
    transform-origin: 50% 0;
  }
  100% {
    opacity:1;
    transform:scale(1);
  }
}

figure {
	height: 28rem;
	max-width: 816px;
	margin: 0 auto;
	overflow: hidden;
}

.image_police {
	margin-top: 1rem;
	width: 100%;
	min-height: 28rem;
}

@media (max-width: 767px) {
	figure{
		display: none;
	}
}

footer {
  	background-color: #191919;
  	color: #f7f7f7;
  	z-index: 10;
}

footer p {
	padding:20px 0px;
	font-size: 0.8em;
	padding-left: 2rem;
}

.fb_iframe_widget {
	margin-top: 20px;
}

@media (max-width: 767px) {
	.panel-group {
		max-width: 100%;
	}
}

@media (max-width: 350px) {
	html {
		font-size: 14px;
	}

	.navbar-brand {
		display: none;
	}

	.intro__header {
		padding: 3rem 1rem;
	}

	.intro__header:before {
		left: 1.1rem;
	}

	.intro__buttons__container {
		padding-left: 0;
	}

	.intro__button {
		line-height: 3.5;
	}
}

